wrap fix

--- a/src/app/components/films/films.component.scss
+++ b/src/app/components/films/films.component.scss
@@ -1,12 +1,13 @@
 section {
-  flex-wrap: wrap;
+  
   align-items: center;
   justify-content: center;
-  margin-left: 4px;
+  margin-left: 5px;
 }
 
 article {
   display: flex;
+  flex-wrap: wrap;
 }
 
 h4 {
@@ -28,5 +29,6 @@ h4 {
     transform: scale(1.1);
     transition: 0.6s;
     box-shadow: -2px -2px 12px rgb(145, 142, 142);
+   
   }
 }
